# cleantree

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c  options.c  options.h  path.c  path.h  path_set.c  path_set.h
test/: Makefile.am  no_args.sh  one_arg.sh  path_set_test.c  path_test.c  remove_dirs.sh  remove_dirs_and_files.sh  remove_files.sh  three_args.sh  three_args_with_duplicate.sh  three_args_with_one_not_under_root.sh  three_args_with_root_dir.sh  two_args.sh  two_args_when_root_is_a_file.sh  two_args_with_missing_root.sh
